[tool.poetry]
name = "altb"
version = "0.2.2"
description = "Cli tool for tracking over binaries and easily swapping between them"
readme = "README.md"
authors = ["Elran Shefer <elran777@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
homepage = "https://github.com/IamShobe/altb"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.15.2"
getch = "^1.0"
blessed = "^1.19.0"
pydantic = "^1.8.2"
typer = "^0.4.0"
PyYAML = "^6.0"
natsort = "^8.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
altb = 'altb.main:main'
